--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap wow fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/services1.png">
+                            <img class="img-responsive" src="services/services1.png">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">SEO Marketing</h3>
@@ -66,7 +66,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap wow fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/services2.png">
+                            <img class="img-responsive" src="services/services2.png">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">SEO Marketing</h3>
@@ -78,7 +78,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap wow fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/services3.png">
+                            <img class="img-responsive" src="services/services3.png">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">SEO Marketing</h3>
@@ -90,7 +90,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap wow fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/services4.png">
+                            <img class="img-responsive" src="services/services4.png">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">SEO Marketing</h3>
@@ -102,7 +102,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap wow fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/services5.png">
+                            <img class="img-responsive" src="services/services5.png">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">SEO Marketing</h3>
@@ -114,7 +114,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="media services-wrap wow fadeInDown">
                         <div class="pull-left">
-                            <img class="img-responsive" src="images/services/services6.png">
+                            <img class="img-responsive" src="services/services6.png">
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">SEO Marketing</h3>
@@ -145,21 +145,21 @@
 			<div class="row">
 				<div class="col-md-4 wow fadeInDown">
 					<div class="clients-comments text-center">
-						<img src="images/client1.png" class="img-circle" alt="">
+						<img src="client1.png" class="img-circle" alt="">
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</h3>
 						<h4><span>-John Doe /</span>  Director of corlate.com</h4>
 					</div>
 				</div>
 				<div class="col-md-4 wow fadeInDown">
 					<div class="clients-comments text-center">
-						<img src="images/client2.png" class="img-circle" alt="">
+						<img src="client2.png" class="img-circle" alt="">
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</h3>
 						<h4><span>-John Doe /</span>  Director of corlate.com</h4>
 					</div>
 				</div>
 				<div class="col-md-4 wow fadeInDown">
 					<div class="clients-comments text-center">
-						<img src="images/client3.png" class="img-circle" alt="">
+						<img src="client3.png" class="img-circle" alt="">
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</h3>
 						<h4><span>-John Doe /</span>  Director of corlate.com</h4>
 					</div>
