--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="Home_page.html">Home</a></li>
-                <li><a href="FAQ.php">FAQ</a></li>
-                <li><a href="client_login.php">LOGIN AS CLIENT</a></li>
-                <li><a href="lawyer_login.php">LOGIN AS LAWYER</a></li>
-                <li><a href="contact.php">Contact</a></li>
+                <li><a href="FAQ.html">FAQ</a></li>
+                <li><a href="client_login.html">LOGIN AS CLIENT</a></li>
+                <li><a href="lawyer_login.html">LOGIN AS LAWYER</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
             </div><!--/.navbar-collapse -->
           </div>
