--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="Home_page.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="FAQ.html">FAQ</a></li>
                 <li><a href="client_login.html">LOGIN AS CLIENT</a></li>
                 <li><a href="lawyer_login.html">LOGIN AS LAWYER</a></li>
